# trio-vis

./: .gitignore  Makefile  README.md  main.py  mypy.ini  playground.ipynb  playground.py  pyproject.toml
.github/workflows/: code-quality.yml  lint-code.yml  lint.yml  run_test.yml  tests.yml
examples/: err_control.py  global_logger.py  happyeyeball.py
tests/: conftest.py  test_all.py  test_desc.py  test_fake.py  test_fake_base.py  test_registery.py  test_sc_monitor.py  trio_obj_test.py
tests/fake/: conftest.py  tree_add_test.py  tree_build_test.py  tree_print_test.py
tests/state/: build_test.py  conftest.py  find_parent_nursery_test.py  state_build_test.py  state_ops_test.py
trio_monitor/: __init__.py  __main__.py  desc_tree.py  fake.py  monitor.py  protocol.py  registry.py  sc_logger.py  sc_monitor.py  scenes.py  state.py  task.py  tree_logger.py  trio_fake.py
trio_monitor/dry_run/: script1.py
trio_monitor/fake/: __init__.py  obj.py
trio_monitor/fake_trio/: __init__.py  objs.py
trio_monitor/monitors/: __init__.py  sc_monitor.py  tree_logger.py
trio_monitor/plays/: __init__.py
trio_vis/: __init__.py  __main__.py  config.py  desc_tree.py  protocol.py  registry.py  sc_logger.py  sc_monitor.py  trio_fake.py
trio_vis/dry_run/: __init__.py  script1.py
user_programs/: happyeyeball.py
